Melhorias para exibição de colunas
Foi deixado de usar o Plugin "Columns" e passei a usar CSS Snippets, mais especificamente o Modular CSS Layout disponível no link a seguir: https://github.com/efemkay/obsidian-modular-css-layout.

O Plugin Callout Manager também foi adicionado e as páginas refatoradas para utilizar desses CSS Snippets.

--- a/4. Diario/2025-10/2025-10-20.md
+++ b/4. Diario/2025-10/2025-10-20.md
@@ -20,8 +20,8 @@ hide done date
 ----------------
 ###### Novas tarefas
 Aqui adiciono novas tarefas. 'Ctrl+L' é o atalho que ativa o plugin Tasks e ajuda a criar uma nova tarefa.
-- [ ] Tarefa 1 #Task/Escrita  [created:: 2025-10-21]
-- [ ] Tarefa 2 #Task/Escrita 
-- [ ] Tarefa 1 #Task/Marcenaria
-- [ ] Tarefa 2 #Task/Marcenaria 
-- [ ] Tarefa 3 #Task/Marcenaria 
+- [ ] Tarefa 1 #Task/Projetos/Escrita 
+- [x] Tarefa 2 #Task/Projetos/Escrita  [completion:: 2025-10-22]
+- [ ] Tarefa 1 #Task/Projetos/Marcenaria
+- [ ] Tarefa 2 #Task/Projetos/Marcenaria 
+- [x] Tarefa 3 #Task/Projetos/Marcenaria  [completion:: 2025-10-22]
