--- a/4. Diario/2025-10/2025-10-21.md
+++ b/4. Diario/2025-10/2025-10-21.md
@@ -22,7 +22,7 @@ Aqui adiciono novas tarefas. 'Ctrl+L' é o atalho que ativa o plugin Tasks e aju
 - [x] Lavar louça #Task/Org  [created:: 2025-10-21]  [completion:: 2025-10-21]
 - [ ] Cozinhar almoço #Task/Org 
 - [ ] Escrever primeiro capítulo #Task/TCC
-- [ ] Ler artigo #Task/TCC
+- [x] Ler artigo #Task/TCC  [completion:: 2025-10-22]
 - [x] Tarefa exemplo #Task/TCC  [completion:: 2025-10-21]
 - [ ] Tarefa exemplo 1 #Task/Carreira
 - [ ] Tarefa exemplo 2 #Task/Carreira 
